<resources>
    <string name="app_name">MyTinder</string>
    <string name="credidentials">Credidentials</string>
    <string name="mail">Mail:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="data">Data</string>
    <string name="full_name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="gender">Gender:</string>
    <string name="nope">I don\'t want to say</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="register">Register</string>
    <string name="newAccount">No Account? Press here to register</string>
    <string name="log_in">Log In</string>
    <string name="search">Search</string>
    <string name="age_between">Age between:</string>
    <string name="search_for">Search for:</string>
    <string name="home">Home</string>
    <string name="matches">Matches</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>